# backend-aqi-classifier

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  test_model.py
aqi_model/: config.json  metadata.json
aqi_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AboutSection.tsx  AdviceSection.tsx  AqiInfoSection.tsx  ImageUpload.tsx  IndividualActions.tsx  ResultCard.tsx  SafetySection.tsx
frontend/src/lib/: api.ts
